docs: Add ORCID iD to whitepaper author block

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -25,6 +25,7 @@
 \usepackage{url}
 \usepackage{natbib}
 \usepackage{fancyvrb}
+\usepackage{orcidlink}
 
 % ============================================================
 % Styling
@@ -58,7 +59,7 @@
   Infrastructure-Level Security for Autonomous AI Agents}%
 }
 \author{
-  Ricardo Ledan
+  Ricardo Ledan\,\orcidlink{0009-0004-3041-7656}
 }
 \date{February 2026}
 
