docs: Add Zenodo DOI to whitepaper and README
Add DOI footnote (10.5281/zenodo.18614503) to the paper title page
and a DOI badge + Paper section to the README linking to the Zenodo
preprint.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -67,6 +67,10 @@
 % ============================================================
 \begin{document}
 \maketitle
+\thispagestyle{plain}
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\footnotetext[1]{Preprint. DOI: \url{https://doi.org/10.5281/zenodo.18614503}. Code: \url{https://github.com/smallthinkingmachines/harombe}}
+\renewcommand{\thefootnote}{\arabic{footnote}}
 
 % ============================================================
 % Abstract
